###############################################################################
# Source files
###############################################################################

set(SOURCES
	test.cu
)

###############################################################################
# linking / library
###############################################################################

add_library(krr-cuda STATIC ${SOURCES})
target_link_libraries(krr-cuda PUBLIC ${CUDA_LIBRARIES} cuda cublas)
